syntax = "proto3";

package protoschema;
option go_package = "discord/pkg/schema";

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string profile_pic = 5;
  bool is_main = 6;
  string bio = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
  string color_code = 10;
  string background_color = 11;
  string background_pic = 12;
  string status = 13;
}
